# django-drf-template

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
apps/api/: schemas.py  throttling.py  urls.py  views.py
apps/authentication/: backends.py  serializers.py  urls.py  views.py
apps/authentication/services/: token_service.py
apps/authentication/tests/: test_views.py
apps/core/: exceptions.py  filters.py  models.py  pagination.py  permissions.py  schemas.py  serializers.py  storage.py  views.py
apps/core/middleware/: request_response.py
apps/core/utils/: helpers.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_models.py  test_views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  testing.py
docker/: Dockerfile  entrypoint.sh
docker/nginx/conf.d/: default.conf
docs/api/: README.md
docs/deployment/: README.md
docs/development/: README.md
requirements/: base.txt  development.txt  production.txt  testing.txt
scripts/: seed_data.py  setup.ps1  setup.sh
